add contestability workflow
(cherry picked from commit 50fb98c1b2d34393832785f46d3d777582ec7cb2)
